--- a/client/src/components/Layout/Footer/footer.css
+++ b/client/src/components/Layout/Footer/footer.css
@@ -22,6 +22,7 @@
 
 #footerStyles_copyrightText {
     text-align: center;
+    margin: 0.5rem 0;
 }
 
 /* ownership text wrapper */
@@ -38,6 +39,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1rem;
+    margin: 0;
 }
 
 /* ownership name */
