--- a/client/src/components/Post/PostItem/postItem.css
+++ b/client/src/components/Post/PostItem/postItem.css
@@ -5,7 +5,7 @@
     min-height: 26rem;
     width: 100%;
     max-width: 28rem;
-    background-color: rgb(189, 189, 189);
+    /* background-color: rgb(189, 189, 189); */
     border-radius: 3px;
     position: relative;
     margin: 3rem .8rem;
@@ -60,8 +60,7 @@
 .postItemStyles_date {
     margin: 0;
     font-size: 1rem;
-    font-weight: 500;
-    color: rgb(104, 104, 104)
+    font-weight: 600;
 }
 
 /* the divider dividing the date and summary */
