--- a/client/src/pages/HomePage/homePage.css
+++ b/client/src/pages/HomePage/homePage.css
@@ -40,7 +40,7 @@
     border: .8rem solid rgb(255, 255, 255);
     border-radius: 3px;
     padding: 0;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* the two background images behind the front middle image one is left and the other is right*/
@@ -80,8 +80,9 @@
 
 #homePageStyles_aboutCard {
     height: auto;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     padding: 2rem;
+    border-radius: 3px;
 }
 
 /* image wrapper */
