--- a/client/src/pages/SavedPage/savedPage.css
+++ b/client/src/pages/SavedPage/savedPage.css
@@ -4,3 +4,12 @@
     text-align: center;
     margin: 3rem 0;
 }
+
+/* title for when there are no saved posts */
+
+#savedPageStyles_noPostTitle {
+    text-align: center;
+    font-size: 1.4rem;
+    margin-top: 4rem;
+    color: #000000
+}
