added updates to styling bugs

--- a/client/src/components/Subscribe/subscribe.css
+++ b/client/src/components/Subscribe/subscribe.css
@@ -38,6 +38,10 @@
     height: 1.4rem;
 }
 
+.subscribeStyles_input:focus {
+    outline: none;
+}
+
 /* mail icon inside the submit button */
 
 .subscribeStyles_mailIcon {
