--- a/client/src/components/Post/PostItem/postItem.css
+++ b/client/src/components/Post/PostItem/postItem.css
@@ -25,7 +25,7 @@
     width: 100%;
     max-width: 22rem;
     height: 18rem;
-    position: relative;
+    /* position: relative; */
 }
 
 /* cover image */
@@ -33,10 +33,10 @@
 .postItemStyles_coverImg img {
     display: block;
     width: 100%;
-    height: 100%;
+    max-width: 22rem;
+    height: 17rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
-    position: absolute;
 }
 
 /* quill p tag surrounding the img element */
@@ -127,4 +127,13 @@
 
 .postItemStyles_readIcon {
     font-size: 2rem;
+}
+
+/* ! MEDIA QUERIES */
+
+@media only screen and (max-width: 344px) {
+    /* cover image */
+    .postItemStyles_coverImg img {
+        height: 13rem;
+    }
 }
