--- a/client/src/pages/UnSubscribePage/unSubscribePage.css
+++ b/client/src/pages/UnSubscribePage/unSubscribePage.css
@@ -34,6 +34,11 @@
     width: 100%;
     max-width: 20rem;
     margin: 1rem 0;
+    border: none;
+}
+
+#unsubscribeStyles_input:focus {
+    outline: none;
 }
 
 #unsubscribeStyles_input:focus {
